--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "node-sass": "^5.0.0",
+    "object.omit": "^3.0.0",
     "react": "^17.0.1",
+    "react-addons-update": "^15.6.3",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
     "react-redux": "^7.2.2",
@@ -22,6 +24,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
