--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://mhiho.github.io/bookorder-mini-application/",
   "name": "front",
   "version": "0.1.0",
   "private": true,
